MICS-7106 fix Multiselect overflows on next rows
fix Multiselect overflows on next rows

--- a/app/react/src/styles/common/funnel.less
+++ b/app/react/src/styles/common/funnel.less
@@ -235,7 +235,7 @@
   border-radius: 7.5px;
   color: rgb(0, 48, 86);
   text-align: center;
-  height: 40px;
+  height: auto;
   border: none;
 }
 
